pset5 apii initial

--- a/HW5/hw5_baileymeche.ipynb
+++ b/HW5/hw5_baileymeche.ipynb
@@ -8,7 +8,7 @@
     "# HW5 - Predictive Regression\n",
     "Bailey Meche\n",
     "\n",
-    "This notebook `hw5_baileymeche.ipynb` executes all files in this repo (attached in canvas as a .zip file). Inspect individual files for any specific code. The report below reports all findings."
+    "This notebook `hw5_baileymeche.ipynb` executes all files in this [repo](https://github.com/BaileyMeche/qts/tree/main/HW5). Inspect individual files for any specific code. The report below reports all findings."
    ]
   },
   {
